--- a/trunk/WINCE600/PLATFORM/EM9170/FILES/platform.bib
+++ b/trunk/WINCE600/PLATFORM/EM9170/FILES/platform.bib
@@ -417,6 +417,14 @@ IF BSP_ISA_IRQ
 ENDIF ; BSP_ISA_IRQ
 ;------------------------------------------------------------------------------
 
+;------------------------------------------------------------------------------
+; ETA108 Driver
+IF BSP_ETA108
+    ETA108.dll      $(_FLATRELEASEDIR)\ETA108.dll					NK  SHK
+
+ENDIF ;BSP_ETA108
+;------------------------------------------------------------------------------
+
 ; @CESYSGEN ENDIF CE_MODULES_DEVICE
 
 
