EM9283:基于EM9283 V1.0的reg bib配置

--- a/WINCE600/PLATFORM/EM9280/FILES/config.bib
+++ b/WINCE600/PLATFORM/EM9280/FILES/config.bib
@@ -74,8 +74,8 @@ IF IMGFLASH !
     IF IMGUUT !
         #define NK_SIZE     02800000    ;40MB
     ENDIF    
-    #define RAM_START   82000000
-    #define RAM_SIZE    06000000    ;96MB    
+    #define RAM_START   82A00000
+    #define RAM_SIZE    05600000		;96MB    
 ENDIF
 
 IF IMGFLASH
@@ -248,4 +248,10 @@ IF IMGTRUSTROMONLY
 ELSE
        ROMFLAGS=00
 ENDIF
+
+;IF IMGTRUSTROMONLY
+;       ROMFLAGS=11
+;ELSE
+;       ROMFLAGS=01
+;ENDIF
 ; EOF config.bib
