--- a/trunk/WINCE600/PLATFORM/EM9280/FILES/platform.bib
+++ b/trunk/WINCE600/PLATFORM/EM9280/FILES/platform.bib
@@ -120,6 +120,11 @@ ENDIF	;BSP_NONAND_FMD !
 ; Keypad Driver
 ;
 ; @CESYSGEN IF CE_MODULES_KEYBD
+;lqk:jul-14-2012
+IF BSP_MATRIX_KEYPAD
+	MKeypad.dll		$(_FLATRELEASEDIR)\MKeypad.dll     NK  SHK
+ENDIF
+
 IF BSP_LRADC
 IF BSP_MX28EVK_KEYPAD
     keypad.dll       $(_FLATRELEASEDIR)\keypad.dll    NK  SHK
@@ -414,6 +419,15 @@ FILES
     tcal.exe              $(_FLATRELEASEDIR)\tcal.exe             NK      U
     rotate.exe            $(_FLATRELEASEDIR)\rotate.exe           NK      U
     audiorouting.exe      $(_FLATRELEASEDIR)\audiorouting.exe     NK      U
+
+;LQK:SEP-19-2012 add 480272 shutdwon image    
+    ShutDownSplash480272.bmp $(_FLATRELEASEDIR)\ShutDownSplash480272.bmp    NK      U
+    
+;LQK:Jul-14-2012 add shutdwon image
+IF BSP_DISPLAY_UC1698
+	ShutDownImage160160.bmp	$(_FLATRELEASEDIR)\ShutDownImage160160.bmp    NK      U
+ENDIF
+	
 
 IF BSP_USB_HSOTG_CLIENT
     USBSet.exe              $(_FLATRELEASEDIR)\USBSet.exe               NK
