1、显示驱动 	增加关机画面 	COMMON_FSL_V2_PDK1_9\LCDIF增加ddlcdif_shutdown.cpp 	修改如下文件： 	COMMON_FSL_V2_PDK1_9\LCDIF\ddlcdif.cpp 	COMMON_FSL_V2_PDK1_9\LCDIF\ddlcdif.h 	EM9280\SRC\DRIVERS\DISPLAY\43wvf1g.cpp 	EM9280\SRC\BOOTLOADER\COMMON\display.c 	EM9280\SRC\BOOTLOADER\XLDR\xldr.c
2、SD卡驱动
	可通过注册表设置SD卡电源控制的GPIO位（GPIO0-31,默认GPIO21），通过注册表设置SD卡的检测电平（上升沿或下降沿）
	修改如下文件：	
	MX28_FSL_V2_PDK1_9\SDHC\sdhc.h
	MX28_FSL_V2_PDK1_9\SDHC\sdhcmain.cpp
	EM9280\SRC\DRIVERS\SDHC\bdpsdch.cpp
	EM9280\SRC\DRIVERS\SDHC\sdch.reg

3、ADC驱动（LRADC）
	改正通道配置的错误和CPU DIE温度测量的错误
	修改如下文件：	
	MX28_FSL_V2_PDK1_9\LRADC\PDK\radc_class.cpp

4、PMU驱动
	增加开机电池检测的准确性（VDD4P2可VDDIO_3V3上的电容会影响上电电池的检测）
	修改如下文件：
	MX28_FSL_V2_PDK1_9\PMU\PDK\pmupdk.c
	EM9280\SRC\BOOTLOADER\XLDR\xldr.c
	完善电池驱动
	EM9280\SRC\DRIVERS\BATTDRVR\battery.c

5、PWM驱动
	增加EM9283 PWM的定义
	EM9280\SRC\DRIVERS\PWM\pwmclass.cpp

6、GPIO驱动
	有两位GPIO与CPU pin对应有错
	EM9280\SRC\DRIVERS\GPIO\gpioclass.cpp

7、MkeyPad驱动
	增加通过注册表设置矩阵键盘格式的功能（5*5，5*4，4*4，4*3，3*3）

8、单色屏驱动
	增加关机画面

--- a/WINCE600/PLATFORM/EM9280/FILES/platform.bib
+++ b/WINCE600/PLATFORM/EM9280/FILES/platform.bib
@@ -120,6 +120,11 @@ ENDIF	;BSP_NONAND_FMD !
 ; Keypad Driver
 ;
 ; @CESYSGEN IF CE_MODULES_KEYBD
+;lqk:jul-14-2012
+IF BSP_MATRIX_KEYPAD
+	MKeypad.dll		$(_FLATRELEASEDIR)\MKeypad.dll     NK  SHK
+ENDIF
+
 IF BSP_LRADC
 IF BSP_MX28EVK_KEYPAD
     keypad.dll       $(_FLATRELEASEDIR)\keypad.dll    NK  SHK
@@ -414,6 +419,15 @@ FILES
     tcal.exe              $(_FLATRELEASEDIR)\tcal.exe             NK      U
     rotate.exe            $(_FLATRELEASEDIR)\rotate.exe           NK      U
     audiorouting.exe      $(_FLATRELEASEDIR)\audiorouting.exe     NK      U
+
+;LQK:SEP-19-2012 add 480272 shutdwon image    
+    ShutDownSplash480272.bmp $(_FLATRELEASEDIR)\ShutDownSplash480272.bmp    NK      U
+    
+;LQK:Jul-14-2012 add shutdwon image
+IF BSP_DISPLAY_UC1698
+	ShutDownImage160160.bmp	$(_FLATRELEASEDIR)\ShutDownImage160160.bmp    NK      U
+ENDIF
+	
 
 IF BSP_USB_HSOTG_CLIENT
     USBSet.exe              $(_FLATRELEASEDIR)\USBSet.exe               NK
